<resources>
    <string name="app_name">Supermarket</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="btnContinue">Nastavi</string>
    <string name="forgotpassword">Zaboravljena lozinka</string>
    <string name="action_settings">Settings</string>
    <string name="login">PRIJAVA</string>
    <string name="sign_up">REGISTRACIJA</string>
    <string name="user_type">Tip korisnika</string>
    <string name="company">Kompanija</string>
    <string name="company_name">Naziv kompanije</string>
    <string name="pib">PIB</string>
    <string name="buyer">Kupac</string>
    <string name="first_name">Ime</string>
    <string name="last_name">Prezime</string>
    <string name="email">Email</string>
    <string name="password_retype">Ponovi lozinku</string>
    <string name="cell_phone">Mobilni</string>
    <string name="phone">Telefon</string>
    <string name="fax">Faks</string>
    <string name="street">Ulica</string>
    <string name="number">Broj</string>
    <string name="appartement">Broj stana</string>
    <string name="floor">Sprat</string>
    <string name="entrance">Broj ulaza</string>
    <string name="city">Izaberi grad</string>
    <string name="postal_code">Poštanski broj</string>
    <string name="newsletter">Novosti</string>
    <string name="day">Dan</string>
    <string name="month">Mesec</string>
    <string name="year">Godina</string>
    <string name="gender">Pol</string>
    <string name="token">Token</string>
    <string name="select_city">Izaberi grad...</string>
    <string name="Greska">Doslo je do greske,pokusajte ponovo!</string>
    <string name="forgotten_password">Zaboravljena lozinka?</string>
    <string name="send_email">Posaljite Vasu E-mail adresu </string>
    <string name="cart">Korpa</string>
    <string name="statistics">Statistika</string>
    <string name="total_amount">UKUPAN IZNOS</string>
    <string name="bought">KUPOVINE</string>
    <string name="recommendations">PREPORUKE</string>
    <string name="add_to_cart">Dodaj u korpu</string>
    
</resources>
