<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_alignParentTop="true"
       android:id="@+id/ll1">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/username"
               android:layout_gravity="center_vertical"
               android:layout_margin="20dp"
               />
           <milosevic.m.sasa.supermarket.components.CustomEditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/email"
               android:textColor="#fff"
               android:textSize="14sp"
               android:textColorHint="#fff"
               android:gravity="center_vertical"
               android:layout_gravity="center_vertical"
               android:textCursorDrawable="@null"
               />


       </LinearLayout>

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@color/white_opacity_10"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"/>

       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/ll1"
        android:id="@+id/ll2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/password"
                android:layout_gravity="center_vertical"
                android:layout_margin="20dp"
                />
            <milosevic.m.sasa.supermarket.components.CustomEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textColorHint="#fff"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textCursorDrawable="@null"
                />


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_opacity_10"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
       >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#feea00"
            android:textSize="15sp"
            android:text="@string/btnContinue"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:paddingTop="17.5dp"
            android:paddingBottom="22.5dp"
            android:paddingLeft="142.8dp"
            android:paddingRight="142.8dp"
            android:id="@+id/login_button"/>

        <milosevic.m.sasa.supermarket.components.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/forgotpassword"
            android:textColor="#fff"
            android:layout_margin="25dp"/>

    </LinearLayout>







</RelativeLayout>